--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "core-js": "^3.31.0",
     "eslint": "^8.54.0",
     "nuxt": "^3.8.2",
+    "nuxt-directus": "^5.7.0",
     "nuxt-icon": "^0.6.6",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
